# expert_network_search_copilot

./: .env  .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  test.ipynb
app/: main.py
app/api/: deps.py
app/api/routes/: health.py  ingest.py  qdrant.py  query.py  research.py
app/core/: config.py  lifespan.py  logging.py
app/db/: postgres.py  queries.py
app/models/: schemas.py
app/services/: candidate_assembler.py  checkpoint_service.py  document_builder.py  document_grader.py  embedding_service.py  filter_extractor.py  ingest_service.py  qdrant_service.py  rag_graph.py  research.py
app/utils/: hashing.py
scripts/: full_ingest.py
src/candidate_ingest_search/: __init__.py  api.py  chunking.py  cli.py  ingestion.py  repository.py  search.py  settings.py  vector_store.py
src/candidate_vector_api/: __init__.py  api.py  chunking.py  cli.py  embeddings.py  ingestion.py  repository.py  schemas.py  search.py  settings.py  types.py  vector_store.py
